# allrepos

./: .gitignore  CMakeLists.txt  all.sh  buildall.sh  cloneall.sh  default.xml  fixauthor.sh  pullall.sh  pushall.sh  statusall.sh
old/: all.sh
scripts/: buildall.sh  cleanall.sh  cloneall.sh  fixauthor.sh  testall.sh
